Cleans up comments and extraneous code Moved listing active threads to a method